--- a/apps/flight-app/src/index.html
+++ b/apps/flight-app/src/index.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Starter</title>
+    <title>Flight42</title>
     <base href="/" />
 
     <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Muli:400,300"
       rel="stylesheet"
-      type="text/css">
+      type="text/css"
+    />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
